# backend-manager-student/src/user_api/v1/routes/index.router.js
@@ -1,10 +1,25 @@
+//! LIBARY
 const router = require('express').Router();
+
+//! ROUTES
 const userRouter = require('./users/user.route');
+const userPrivateRouter = require('./users/user.private.route');
+
+//! SHARE MIDDLEWARE
+const accessStudentMiddleware = require('../../../share/middleware/access.student.middleware');
+
 /**
  * @author Nguyễn Tiến Tài
  * @created_at 17/12/2022
  * @update_at 11/01/2023
- * @description Route Users
+ * @description Route Users middleware
+ */
+router.use('/api/v1/user/private', accessStudentMiddleware, userPrivateRouter);
+
+/**
+ * @author Nguyễn Tiến Tài
+ * @created_at 23/02/2023
+ * @description Route Users not middleware
  */
 router.use('/api/v1/user', userRouter);
 
