# server-send-email-student/src/share/configs/regex.js
@@ -1,0 +1,8 @@
+module.exports = {
+    /**
+     * @author Nguyễn Tiến Tài
+     * @created_at 23/02/2022
+     * @description REGEX is Replace string param
+     */
+    REGEX_IS_STRING_PARAM: /\${(\w+)}/g,
+};
